adds gems necessary for testing

--- a/resistance/Gemfile
+++ b/resistance/Gemfile
@@ -35,6 +35,12 @@ gem 'actioncable'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rspec-rails'
+  gem 'capybara'
+  gem 'selenium-webdriver'
+  gem 'factory_girl_rails'
+  gem 'database_cleaner'
+
 end
 
 group :development do
